HelloUltraviolet/Fixtures/RejectedSource/Keys/SharedReadThenWrite/Expected.uv
//! Expected diagnostic metadata for the SharedReadThenWrite rejected-source specimen.

expectedDiagnostic("E-CON-0060", "requirement.19.ReadThenWriteDiagnosticSurface")
